[gd_scene load_steps=4 format=3 uid="uid://v7exp5c8j1tf"]

[ext_resource type="Script" path="res://calcfunc.gd" id="1_yuwxh"]
[ext_resource type="Theme" uid="uid://b16mm2uf5waty" path="res://Big_Font.tres" id="2_feilx"]

[sub_resource type="LabelSettings" id="LabelSettings_cnyoi"]
font_size = 38

[node name="calcfunc" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yuwxh")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 177.0
offset_top = 256.0
offset_right = 302.0
offset_bottom = 283.0

[node name="TextEdit2" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 412.0
offset_right = 293.0
offset_bottom = 439.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 236.0
offset_right = 140.0
offset_bottom = 289.0
text = "Num1:"
label_settings = SubResource("LabelSettings_cnyoi")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 390.0
offset_right = 147.0
offset_bottom = 443.0
text = "Num2:"
label_settings = SubResource("LabelSettings_cnyoi")

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 499.0
offset_right = 628.0
offset_bottom = 622.0
label_settings = SubResource("LabelSettings_cnyoi")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 539.0
offset_right = 162.0
offset_bottom = 592.0
text = "results:"
label_settings = SubResource("LabelSettings_cnyoi")

[node name="btnAdd" type="Button" parent="."]
layout_mode = 0
offset_right = 124.0
offset_bottom = 78.0
theme = ExtResource("2_feilx")
text = "+"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 778.0
offset_top = 351.0
offset_right = 902.0
offset_bottom = 429.0
theme = ExtResource("2_feilx")
text = "exit"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 597.0
offset_top = 360.0
offset_right = 721.0
offset_bottom = 438.0
theme = ExtResource("2_feilx")
text = "clear"

[node name="btnPow" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 112.0
offset_right = 143.0
offset_bottom = 190.0
theme = ExtResource("2_feilx")
text = "**"

[node name="btnDiv" type="Button" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 114.0
offset_right = 295.0
offset_bottom = 192.0
theme = ExtResource("2_feilx")
text = "/"

[node name="btnMod" type="Button" parent="."]
layout_mode = 0
offset_left = 330.0
offset_top = 119.0
offset_right = 454.0
offset_bottom = 197.0
theme = ExtResource("2_feilx")
text = "mod"

[node name="btnMult" type="Button" parent="."]
layout_mode = 0
offset_left = 310.0
offset_top = 10.0
offset_right = 434.0
offset_bottom = 88.0
theme = ExtResource("2_feilx")
text = "*"

[node name="btnSub" type="Button" parent="."]
layout_mode = 0
offset_left = 154.0
offset_top = 2.0
offset_right = 278.0
offset_bottom = 80.0
theme = ExtResource("2_feilx")
text = "-"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 311.0
offset_right = 148.0
offset_bottom = 364.0
text = "Operation:"
label_settings = SubResource("LabelSettings_cnyoi")

[node name="lblOp" type="Label" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 311.0
offset_right = 372.0
offset_bottom = 364.0
label_settings = SubResource("LabelSettings_cnyoi")

[connection signal="pressed" from="btnAdd" to="." method="_on_btn_add_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnPow" to="." method="_on_btn_pow_pressed"]
[connection signal="pressed" from="btnDiv" to="." method="_on_btn_div_pressed"]
[connection signal="pressed" from="btnMod" to="." method="_on_btn_mod_pressed"]
[connection signal="pressed" from="btnMult" to="." method="_on_btn_mult_pressed"]
[connection signal="pressed" from="btnSub" to="." method="_on_btn_sub_pressed"]
